# internal/transport/rest/auth.go
@@ -2,6 +2,7 @@ package rest
 
 import (
 	"errors"
+	"fmt"
 
 	"github.com/gofiber/fiber/v2"
 
@@ -11,8 +12,9 @@ import (
 func (h *Handler) initAuthRoutes(api fiber.Router) {
 	users := api.Group("/auth")
 	{
-		users.Post("/sign-up", h.userSignUp)
-		users.Post("/sign-in", h.userSignIn)
+		users.Post("/sign-up", h.signUp)
+		users.Post("/sign-in", h.signIn)
+		users.Post("/refresh", h.refresh)
 		users.Post("/verify", h.verify)
 	}
 }
@@ -20,14 +22,14 @@ func (h *Handler) initAuthRoutes(api fiber.Router) {
 // @Summary User SignUp
 // @Tags users-auth
 // @Description create user account
-// @ModuleID userSignUp
+// @ModuleID signUp
 // @Accept  json
 // @Produce  json
 // @Param input body core.AuthInput true "sign up info"
 // @Success 201 {string} string "Created"
 // @Failure 400 {object} response
 // @Router /auth/sign-up [post]
-func (h *Handler) userSignUp(c *fiber.Ctx) error {
+func (h *Handler) signUp(c *fiber.Ctx) error {
 	var inp core.AuthInput
 	if err := c.BodyParser(&inp); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(response{err.Error()})
@@ -53,14 +55,14 @@ func (h *Handler) userSignUp(c *fiber.Ctx) error {
 // @Summary User SignIn
 // @Tags users-auth
 // @Description user sign in
-// @ModuleID userSignIn
+// @ModuleID signIn
 // @Accept  json
 // @Produce  json
 // @Param input body core.AuthInput true "sign up info"
 // @Success 200 {object} core.Tokens
 // @Failure 400 {object} response
 // @Router /auth/sign-in [post]
-func (h *Handler) userSignIn(c *fiber.Ctx) error {
+func (h *Handler) signIn(c *fiber.Ctx) error {
 	var inp core.AuthInput
 
 	if err := c.BodyParser(&inp); err != nil {
@@ -81,6 +83,8 @@ func (h *Handler) userSignIn(c *fiber.Ctx) error {
 
 		return c.SendStatus(fiber.StatusInternalServerError)
 	}
+
+	c.Set("Set-Cookie", fmt.Sprintf("refresh-token=%s; HttpOnly", res.RefreshToken))
 
 	return c.JSON(res)
 }
@@ -117,4 +121,35 @@ func (h *Handler) verify(c *fiber.Ctx) error {
 	}
 
 	return c.SendStatus(fiber.StatusOK)
+}
+
+// @Summary Refresh Token
+// @Tags users-auth
+// @Description refresh token
+// @ModuleID refresh
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} core.Tokens
+// @Failure 400 {object} response
+// @Router /auth/refresh [post]
+func (h *Handler) refresh(c *fiber.Ctx) error {
+	cookie := c.Cookies("refresh-token", "")
+	if cookie == "" {
+		return c.Status(fiber.StatusBadRequest).JSON(response{"refresh token is empty"})
+	}
+
+	res, err := h.usersService.RefreshTokens(c.Context(), cookie)
+	if err != nil {
+		if errors.Is(err, core.ErrTokenNotFound) || errors.Is(err, core.ErrRefreshTokenExpired) {
+			return c.Status(fiber.StatusBadRequest).JSON(response{err.Error()})
+		}
+
+		h.logger.Error(err)
+
+		return c.SendStatus(fiber.StatusInternalServerError)
+	}
+
+	c.Set("Set-Cookie", fmt.Sprintf("refresh-token=%s; HttpOnly", res.RefreshToken))
+
+	return c.JSON(res)
 }
